--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -1,8 +1,9 @@
 .navigation{
+    max-width:114rem;
     height:6.5rem;    
     display: flex;
-    width: 100%;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    //background: $grey-dark-1;
+    margin: 0 auto;
+    
 }
