--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,4 +7,6 @@
 @import "component/nav";
 @import "component/overlay";
 @import "component/media";
+@import "component/gallery";
+@import "component/sample";
 @import "pages/home";
