--- a/sass/layout/_front.scss
+++ b/sass/layout/_front.scss
@@ -8,9 +8,19 @@
     &__overlay{
         position:absolute;
         top: 40%;
-        left:5%;        
-        color:$grey-light-1;
-        
+        left:5%;          
+        color:$grey-light-1;      
+
+        @include Responsive(phone){            
+            width: 90%;   
+
+        }   
+        @include Responsive(xl-desktop){            
+            top: 50%;
+            left:50%; 
+            transform: translate(-50%,-50%);                
+
+        }       
         &--heading{
             font-size: 6rem;
             font-weight: 100;
@@ -18,6 +28,17 @@
             text-transform: uppercase;
             display: inline-block;
             font-family: "Varela";
+
+            @include Responsive(phone){
+                font-size: 3rem;
+            }
+            @include Responsive(xl-desktop){            
+                font-size: 10rem;  
+                font-weight: 200; 
+                text-align: center;
+                width: 100rem;
+    
+            }   
         }
         &--subheading{
             font-size: 1.4rem;           
@@ -25,6 +46,18 @@
             margin-top: .5rem;
             letter-spacing: .2rem;
             line-height: 2rem;
+            @include Responsive(phone){
+                width:80%;
+                text-align: justify;
+            }
+            @include Responsive(xl-desktop){            
+                text-align: justify;
+                width: 100rem;
+                text-align: center;
+                font-size: 1.8rem;
+    
+            }   
+           
         }
     }
 }
