--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -13,16 +13,30 @@
         &:not(:last-child){
             margin-right: $gutter-horizontal;
         }
+       
     }
 
     .col-1-of-2{
-        width: calc((100% - #{$gutter-horizontal})/2);      
+        width: calc((100% - #{$gutter-horizontal})/2);  
+       
     }
     .col-1-of-3{
         width: calc((100% - 2 * #{$gutter-horizontal})/3);
+
+        @include Responsive(phone){
+            width: 100%; 
+        } 
+       
     }
     .col-1-of-4{
         width: calc((100% - 3 * #{$gutter-horizontal})/4);
+        
+        @include Responsive(tab-port){
+            width: 40%; 
+        }
+        @include Responsive(phone){
+            width: 100%; 
+        }        
     }
     .col-2-of-3{
         width: calc(2 * ((100% - 2 * #{$gutter-horizontal})/3) + #{$gutter-horizontal});
