--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,4 +9,5 @@
 @import "component/media";
 @import "component/gallery";
 @import "component/sample";
+@import "component/review";
 @import "pages/home";
