--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,9 @@ body {
       margin-right: 6rem; }
   .row .col-1-of-2 {
     width: calc((100% - 6rem)/2); }
+    @media only screen and (max-width: 37.5em) {
+      .row .col-1-of-2 {
+        width: 100%; } }
   .row .col-1-of-3 {
     width: calc((100% - 2 * 6rem)/3); }
     @media only screen and (max-width: 37.5em) {
@@ -262,11 +265,88 @@ body {
     transform: scale(1.03); }
 
 .sample {
-  margin-top: 10rem;
-  background-image: linear-gradient(to right, rgba(255, 0, 0, 0.4), rgba(255, 0, 0, 0.2)), url("../img/winecover.jpg");
   height: 30rem;
-  background-position: top;
-  background-size: cover; }
+  background-image: linear-gradient(to right, rgba(0, 128, 0, 0.6), rgba(0, 0, 0, 0.8)), url("../img/winecover.jpg");
+  background-size: cover;
+  background-position: right;
+  position: relative;
+  font-family: "Verala";
+  text-align: center; }
+  .sample__content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center; }
+    .sample__content--text {
+      font-size: 6rem;
+      font-weight: 500;
+      color: #faf9f9; }
+      @media only screen and (max-width: 56.25em) {
+        .sample__content--text {
+          font-size: 4rem; } }
+    .sample__content--button {
+      border-radius: 0rem;
+      padding: 1rem 2rem;
+      font-size: 2rem;
+      font-family: "Verala";
+      background: rgba(0, 0, 0, 0.6);
+      color: #faf9f9;
+      border-radius: .2rem;
+      outline: none;
+      box-shadow: 0rem 0rem 0.2rem 0.2rem rgba(255, 255, 255, 0.2);
+      cursor: pointer;
+      transition: all .4s ease-in-out; }
+      .sample__content--button:hover {
+        transform: scale(1.05); }
+
+.review {
+  background-color: #f0f0f0;
+  padding: 3rem 0rem;
+  padding-bottom: 10rem;
+  margin: 0 auto;
+  text-align: center; }
+  .review__header {
+    text-align: center;
+    font-size: 2.2rem;
+    font-family: "Raleway";
+    margin: 2rem 0rem; }
+    .review__header .fa-star {
+      color: #fff;
+      display: inline-block;
+      background: green;
+      font-size: 2rem;
+      padding: .5rem; }
+  .review__content {
+    padding-top: 5rem;
+    text-align: center;
+    background-color: #fff;
+    box-shadow: 0.3rem 0.2rem 0.3rem rgba(0, 0, 0, 0.1);
+    border-radius: .1rem; }
+    .review__content--avatar {
+      height: 12rem;
+      width: 12rem;
+      border-radius: 50%;
+      transition: all .4s ease-in-out; }
+      .review__content--avatar:hover {
+        border-radius: 20%;
+        transform: scale(1.2); }
+    .review__content--description {
+      min-height: 20rem;
+      width: 80%;
+      margin: 0 auto;
+      padding: 3rem 0rem;
+      font-family: "Verala";
+      font-size: 1.7rem;
+      font-weight: 100;
+      text-align: justify;
+      color: #777; }
+      .review__content--description .userinfo h3 {
+        font-weight: 600;
+        font-size: 1.8rem;
+        text-align: center;
+        margin-top: 1.5rem;
+        color: green; }
 
 .sidebar__menu {
   position: fixed;
