--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -18,7 +18,9 @@
 
     .col-1-of-2{
         width: calc((100% - #{$gutter-horizontal})/2);  
-       
+        @include Responsive(phone){
+            width: 100%; 
+        } 
     }
     .col-1-of-3{
         width: calc((100% - 2 * #{$gutter-horizontal})/3);
