--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,4 +10,7 @@
 @import "component/gallery";
 @import "component/sample";
 @import "component/review";
+@import "component/footer";
+@import "component/social";
+@import "component/contact";
 @import "pages/home";
