--- a/css/main.css
+++ b/css/main.css
@@ -348,6 +348,79 @@ body {
         margin-top: 1.5rem;
         color: green; }
 
+.footer {
+  background-color: #101010;
+  width: 100%;
+  font-family: "Raleway";
+  font-size: 1.2rem;
+  font-weight: 100;
+  padding: 5rem 0rem; }
+  .footer__content {
+    width: 90%;
+    margin: 0 auto;
+    color: #faf9f9; }
+    .footer__content h3 {
+      border-bottom: .1rem dotted green;
+      padding-bottom: .4rem;
+      display: inline-block;
+      margin-bottom: 2rem;
+      font-size: 1.8rem;
+      font-family: "Raleway"; }
+    .footer__content ul {
+      list-style: none; }
+      .footer__content ul li {
+        padding: .6rem 0rem; }
+
+.social {
+  background-color: #080808;
+  height: 6rem;
+  text-align: center; }
+  .social span {
+    line-height: 6rem;
+    font-size: 1.6rem;
+    color: #faf9f9;
+    text-align: center;
+    transition: all .4s ease-in-out;
+    line-height: 6rem;
+    padding: 1.8rem;
+    cursor: pointer; }
+    .social span:hover {
+      font-size: 1.7rem;
+      background: red;
+      color: #faf9f9; }
+
+.contact {
+  padding: 10rem 0rem; }
+  .contact__form--label {
+    font-weight: 500;
+    font-size: 2rem;
+    text-align: center;
+    color: #333; }
+  .contact__form--input {
+    border-radius: none;
+    background-image: url("../img/arrowright.png");
+    background-size: 1rem 1.5rem;
+    background-repeat: no-repeat;
+    background-position: 98%;
+    border-bottom: 0.1rem solid rgba(0, 0, 0, 0.2);
+    height: 2.5rem;
+    outline: none;
+    padding: 2rem;
+    border: 0.1rem solid rgba(0, 0, 0, 0.4);
+    width: 60%;
+    transition: all .4s ease-in-out; }
+    .contact__form--input:focus {
+      border: 0.1rem solid rgba(255, 0, 0, 0.4);
+      width: 100%; }
+    .contact__form--input::placeholder {
+      font-family: "Lato";
+      font-size: 1.2rem; }
+    @media only screen and (max-width: 37.5em) {
+      .contact__form--input {
+        width: 100%;
+        margin: 0 auto;
+        margin-top: 2rem; } }
+
 .sidebar__menu {
   position: fixed;
   z-index: 200;
